# workaly

./: .gitignore  README.md
auth-service/: Dockerfile  go.mod  go.sum  main.go
auth-service/pb/userpb/proto/: user.pb.go  user_grpc.pb.go
auth-service/proto/: user.proto
chat-service/: go.mod
job-service/: go.mod
notifications-service/: go.mod
task-service/: go.mod
user-service/: Cargo.toml  build.rs
user-service/migrations/: 20250725153811_users_initial_table.sql
user-service/proto/: user.proto
user-service/src/: error.rs  main.rs
