[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "simple"] }
prost = "0.13.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
